--- a/app/views/webinars/new.html.erb
+++ b/app/views/webinars/new.html.erb
@@ -1,2 +1,58 @@
 <h1>Webinars#new</h1>
-<p>Find me in app/views/webinars/new.html.erb</p>
+<div  class="row">
+	<div class="col-xs-12">
+		<%= form_for(@webinar , :html => {class:"form-horizontal", role: "form"}) do |f| %>
+		<div class="form-group">
+			<div class="control-label col-sm-2">	 
+			  <%= f.label :name %>
+		    </div>
+		    <div class="col-sm-8">
+			  <%= f.text_field :name, class: "form-control", placeholder: "Webinar name", autofocus: true %>
+		    </div>
+		</div>
+		<div class="form-group">
+			<div class="control-label col-sm-2">	 
+			  <%= f.label :date %>
+		    </div>
+		    <div class="col-sm-8">
+			  <%= f.date_field date, class: "form-control" %>
+		    </div>
+		</div>
+		<div class="form-group">
+			<div class="control-label col-sm-2">	 
+			  <%= f.label :relatore %>
+		    </div>
+		    <div class="col-sm-8">
+			  <%= f.text_field :relatore, class: "form-control", placeholder: "Webinar name", autofocus: true %>
+		    </div>
+		</div>
+	
+		<div class="form-group">
+			<div class="control-label col-sm-2">	 
+			  <%= f.label :description %>
+		    </div>
+		    <div class="col-sm-8">
+			  <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description", autofocus: true %>
+		  </div>
+		</div>
+		<div class="form-group">
+			<div class="row">
+			<div class="col-sm-offset-2 col-sm-8">
+			  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+			    <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+			  <% end %>
+		    </div>
+		  </div>
+		</div>
+		<div class="form-group">
+		  	<div class="col-sm-offset-2 col-sm-8">
+			  <%= f.submit class: 'btn btn-primary btn-lg' %>
+		    </div>
+	    </div>
+		  </div>
+		<% end %>
+	</div>
+</div>
+<div class="col-xs-12" align="center">
+[ <%= link_to  "Cancel and return to All Articles ", articles_path%> ]
+</div>
