Add new webinar

--- a/app/views/webinars/index.html.erb
+++ b/app/views/webinars/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Webinars#index</h1>
-<p>Find me in app/views/webinars/index.html.erb</p>
+<h1 align="center">Webinars</h1>
 
-<%= link_to "Sign out", destroy_user_session_path %>
+
+<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
