--- a/app/views/webinars/show.html.erb
+++ b/app/views/webinars/show.html.erb
@@ -1,2 +1,50 @@
-<h1>Webinars#show</h1>
-<p>Find me in app/views/webinars/show.html.erb</p>
+<h1> Webinar <%= @webinar.name %></h1>
+
+<%= render "shared/errors", obj: @webinar %>
+
+<%= form_for(@webinar, html: {class:"form-horizontal", role: "form"}) do |f| %>
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :name %>
+    </div>
+    <div class="col-sm-8">
+	  <%= f.text_field :name, class: "form-control", placeholder: "Enter webinar name", autofocus: true %>
+    </div>
+</div>
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :relatore %>
+    </div>
+    <div class="col-sm-8">
+	  <%= f.text_field :relatore, class: "form-control", placeholder: "Enter relatore name", autofocus: true %>
+    </div>
+</div>
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :programa %>
+    </div>
+    <div class="col-sm-8">
+	  <%= f.text_area :programa, class: "form-control", size: "60x12" %>
+    </div>
+</div>
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :date %>
+    </div>
+    <div class="col-sm-8">
+	  <%= f.date_field :date, class: "form-control" %>
+    </div>
+</div>
+
+
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-8">
+  <%= f.submit class: 'btn btn-primary btn-lg' %>
+</div>
+</div>
+  
+<% end %>
+
+<div class="col-xs-12" align="center">
+[ <%= link_to  "Cancel and return to All Webinars ", root_path%> ]
+</div>
