added assoc and finish views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+
+    <%= render 'shared/messages' %>
     
   	<div class="container">
-      <%= render 'shared/messages' %>
+      
 
     <%= yield %>
 
