--- a/app/views/webinars/index.html.erb
+++ b/app/views/webinars/index.html.erb
@@ -1,4 +1,28 @@
 <h1 align="center">Webinars</h1>
 
+<div align="center" >
+  <%= will_paginate @webinar, renderer: BootstrapPagination::Rails %>
+</div>
 
-<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+<div class="row">	
+	<div class="col-md-10 col-md-offset-1">
+		<% @webinars.each do |webinar| %>
+		  <div class="well">
+			<h3 align="center"><%= webinar.name %></h3>
+				<ul class="list-group">					
+					<li  class="list-group-item">Date: <%= webinar.date %></li>
+					<li class="list-group-item">Relatore: <%= webinar.relatore %></li>			
+				</ul>
+			<div align="center"><br>			
+			<%= link_to "View this Webinar", webinar_path(webinar), class: "btn btn-xs btn-success" %>			
+			</div>
+		  </div>
+		<% end %>
+	</div>
+</div>
+
+<div align="center" >
+  <%= will_paginate @webinar, renderer: BootstrapPagination::Rails %>
+</div>
+		
+
