--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,20 +34,11 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
+        
       </ul>
-      <ul class="nav navbar-nav">
-        <li>
-        <li></li>
-        <li></li>    
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to  "Sign out", destroy_user_session_path, method: :delete%></li>    
       </ul>
-
-      <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>      
-
     </div><!--/.nav-collapse -->
   </div>
 </nav>
