styled log in view and msg display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-
-    <%= render 'shared/messages' %>
+      <div class="container msg">
+        <%= render 'shared/messages' %>
+      </div>
     
   	<div class="container">
       
