--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,8 +28,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Participants<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to  "All Participants", participants_path%></li>
-            <li><%= link_to  "Add Participant ", new_participant_path %></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to  "Add Participant", new_participant_path %></li>
+            <li><%= link_to  "Upload Participants", import_participants_path %></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
