--- a/app/views/webinars/show.html.erb
+++ b/app/views/webinars/show.html.erb
@@ -6,7 +6,7 @@
 				<ul class="list-group">					
 					<li class="list-group-item">Date: <%= @webinar.date %></li>
 					<li class="list-group-item">Relatore: <%= @webinar.relatore %></li>
-					<li class="list-group-item">Programa: <%= @webinar.programa %></li>		
+					<li class="list-group-item">Programma: <%= @webinar.programa %></li>		
 				</ul>
 			<div align="center"><br>
 			<%= link_to "Edit this Webinar", edit_webinar_path(@webinar), class: "btn btn-xs btn-success" %>
