--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,12 @@
     <%= yield %>
 
    </div>
-   <%= debug(params) if Rails.env.development? %>
+   <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <%= debug(params) if Rails.env.development? %>
+      </div>
+    </div>
+   </div>
   </body>
 </html>
