--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -61,9 +61,24 @@
 </div>
   
 <% end %>
-
-
-
 <div class="col-xs-12" align="center">
 [ <%= link_to  "Cancel and return to All Participant ", participants_path%> ]
 </div>
+<hr>
+<div class="col-sm-4 col-sm-offset-4">		
+		<h3 align="center">Import Participants</h3><br>
+		<%= form_tag import_participants_path, multipart: true  do %>
+		<span class="btn btn-xs btn-warning btn-file">
+           Choose File
+             <%= file_field_tag :file %>
+        </span><br><br>
+		
+		<%= submit_tag "Upload participants",class: 'btn btn-xs btn-success' %>
+		<% end %><br		
+		
+</div>
+<hr>
+
+
+
+
