--- a/app/views/webinars/new.html.erb
+++ b/app/views/webinars/new.html.erb
@@ -21,7 +21,7 @@
 </div>
 <div class="form-group">
 	<div class="control-label col-sm-2">	 
-	  <%= f.label :programa %>
+	  <%= f.label :programma %>
     </div>
     <div class="col-sm-8">
 	  <%= f.text_area :programa, class: "form-control", size: "60x12" %>
