--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,6 +30,16 @@
         </li>
         
       </ul>
+      <ul class="nav navbar-nav">        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatori<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to  "All Relatori", speakers_path%></li>
+            <li><%= link_to  "Add Relatore ", new_speaker_path %></li>  
+          </ul>
+        </li>
+        
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to  "Sign out", destroy_user_session_path, method: :delete %></li>    
       </ul>
