--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -43,6 +43,30 @@
 	  <%= f.text_field :city, class: "form-control" %>
     </div>
 </div>
+
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :conected %>
+    </div>
+    <div class="col-sm-2">
+	  <%= f.check_box :yes, class: "checkbox" %>
+    </div>
+
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :not_conected %>
+    </div>
+    <div class="col-sm-2">
+	  <%= f.check_box :no, class: "checkbox" %>
+    </div>
+
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :Ascheri %>
+    </div>
+    <div class="col-sm-2">
+	  <%= f.check_box :no, class: "checkbox" %>
+    </div>
+</div>
+<hr>
 <div class="form-group">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
