--- a/app/views/webinars/new.html.erb
+++ b/app/views/webinars/new.html.erb
@@ -12,11 +12,11 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
-	  <%= f.label :relatore %>
+    <div class="control-label col-sm-2">
+        <%= f.label :relatore %>
     </div>
     <div class="col-sm-8">
-	  <%= f.text_field :relatore, class: "form-control", placeholder: "Enter relatore name", autofocus: true %>
+        <%= f.collection_select :speaker_ids, Speaker.all, :id, :full_name, { prompt: "Select Relatore"}, class: "form-control" %>            
     </div>
 </div>
 <div class="form-group">
