--- a/app/views/webinars/index.html.erb
+++ b/app/views/webinars/index.html.erb
@@ -11,7 +11,10 @@
 			<h3 align="center"><%= webinar.name %></h3>
 				<ul class="list-group">					
 					<li  class="list-group-item">Date: <%= webinar.date %></li>
-					<li class="list-group-item">Relatore: <%= webinar.relatore %></li>			
+					<% if webinar.speakers.any? %>
+						<li  class="list-group-item"><%= render webinar.speakers %></li>
+					<% end %>
+								
 				</ul>
 			<div align="center"><br>			
 			<%= link_to "View this Webinar", webinar_path(webinar), class: "btn btn-xs btn-success" %>			
