--- a/app/views/participants/_connected.html.erb
+++ b/app/views/participants/_connected.html.erb
@@ -1,3 +1,3 @@
-<% Participant.where(connected: true).find_each do |participant| %>
+<% ParticipantWebinar.where(connected: true).find_each do |participant| %>
   <li class="list-group-item"><%= link_to "#{participant.first_name} #{participant.last_name} - #{participant.city}", participant_path(participant) %> &nbsp;</li>
 <% end %>
