--- a/app/views/webinars/show.html.erb
+++ b/app/views/webinars/show.html.erb
@@ -39,9 +39,13 @@ $(document).ready(function(){
 			        <% end %>
 	          </div>
 	          <div id="connected" class="tab-pane fade in active">
+	          	<% if @webinar.participants.connected? %>
+				<p style="float: right"><span class="label label-info"><%= pluralize(@webinar.participants.count, "participant")  %></span></p><br>
+			         <p><%= render "participants/connected" %></p>
+			        <% end %>
 	            
 				
-			         <%= render "participants/connected"  %>
+			         
 			        
 	          </div>
 	          <div id="notConnected" class="tab-pane fade in active">
