--- a/app/views/participants/_notconnected.html.erb
+++ b/app/views/participants/_notconnected.html.erb
@@ -1,3 +1,3 @@
-<% ParticipantWebinar.where(notconnected: true).find_each do |participant| %>
-  <li class="list-group-item"><%= link_to "#{participant.first_name} #{participant.last_name} - #{participant.city}", participant_path(participant) %> &nbsp;</li>
+<% ParticipantWebinar.where(connected: false, webinar_id: @webinar).find_each do |participantw| %>
+  <li class="list-group-item"><%= link_to "#{participantw.participant.first_name} #{participantw.participant.last_name} - #{participantw.participant.city}", participant_path(participantw.participant) %> &nbsp;</li>
 <% end %>
