--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -43,8 +43,14 @@
 	  <%= f.text_field :city, class: "form-control" %>
     </div>
 </div>
-
-
+<div class="form-group">
+	<div class="control-label col-sm-2">	 
+	  <%= f.label :ascherip, 'Ascheri & Partners', class: "input_checkbox" %>
+    </div>
+    <div class="col-sm-8">
+	  <%= f.check_box :ascherip, class: "checkbox" %>
+    </div>
+</div>
 <hr>
 <div class="form-group">
 	<div class="row">
@@ -55,7 +61,6 @@
 		</div>
 	</div>
 </div>
-
 
 <div class="form-group">
   <div class="col-sm-offset-2 col-sm-8">
@@ -70,7 +75,9 @@
 <div class="col-xs-12" align="center">
 [ <%= link_to  "Cancel and return to All Participant ", participants_path%> ]
 </div>
-<hr>
+<div class="col-xs-12"><hr></div>
+
+
 <div class="col-sm-4 col-sm-offset-4">		
 		<h3 align="center">Import Participants</h3><br>
 		<%= form_tag import_participants_path, multipart: true  do %>
@@ -83,7 +90,7 @@
 		<% end %><br>		
 		
 </div>
-<hr>
+
 
 
 
