--- a/app/views/participants/_participantconnected.html.erb
+++ b/app/views/participants/_participantconnected.html.erb
@@ -1,6 +1,6 @@
-<% webinar = d.object.webinar %>
-<%= webinar.name %> 
-<%= d.check_box :connected %> Connected?
+<li class="list-group-item"><% webinar = d.object.webinar %>
+<%= webinar.name %>&nbsp; 
+<span class="pull-right"><%= d.check_box :connected %> Connected?</span></li>
      
   
 
