--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,5 +1,21 @@
-<h1 align="center">Participants <span class="badge badge-default"><%= pluralize(@participants.count, "participant")  %></span></h1><br>
+<div class="col-md-4 col-md-offset-8">
+	<div class="row">
+<form class="navbar-form navbar-right">
+    <%= form_tag participants_path, method: :get do %>
+        <div class='form-group'>            
+            <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Participant" %>
+            <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
+        </div>
+    <% end %>
+</form>
+</div>
+</div>
+    
 
+
+<div class="col-md-8 col-md-offset-2"> 
+<h1 align="center">Participants <span class="badge badge-default"><%= pluralize(@participants.count, "participant")  %></span></h1><br>
+</div>
 <div align="center" >
   <%= will_paginate @participant, renderer: BootstrapPagination::Rails %>
 </div>
