--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -63,7 +63,7 @@
 	</div>
 </div>
 
-<% if @participant.webinars.any? %>
+<% if @participant.webinars.exists? &&  %>
 <div class="form-group" >
 	<div class="row" >
 		<div class="col-sm-8 col-sm-offset-2" > <hr><hr> 
