removed dependent destroy

--- a/app/views/participants/_participantconnected.html.erb
+++ b/app/views/participants/_participantconnected.html.erb
@@ -1,6 +1,6 @@
 <li class="list-group-item"><% webinar = d.object.webinar %>
 <%= webinar.name %>&nbsp; 
-<span class="pull-right"><%= d.check_box :connected %> Connected?</span></li>
+<span class="pull-right"><%= d.check_box :connected %> Connected? | <%= d.check_box :_destroy %> Delete</span></li>
      
   
 
