--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -63,12 +63,12 @@
 	</div>
 </div>
 
-<% if @participant.webinars.exists? &&  %>
+<% if @participant.webinars.exists?  %>
 <div class="form-group" >
 	<div class="row" >
 		<div class="col-sm-8 col-sm-offset-2" > <hr><hr> 
 		  <%= f.fields_for :participant_webinars do |d| %>
-		  <%= d.hidden_field :participant_id, value: @participant.id %>
+		  <%= d.hidden_field :participant_id, value: @participant.id %>		  
 		  <%= render 'participants/participantconnected', d: d %>
 		  <% end %>
 		</div>
