--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,40 +8,42 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to  "CIP Tracker", webinars_path, class: "navbar-brand"%>
-      
+
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">        
+      <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Webinars <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to  "All Webinars", webinars_path%></li>
-            <li><%= link_to  "Add Webinar", new_webinar_path%></li>           
+            <li><%= link_to  "Add Webinar", new_webinar_path%></li>
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav">        
+      <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Participants<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to  "All Participants", participants_path%></li>
-            <li><%= link_to  "Add Participant", new_participant_path %></li>  
+            <li><%= link_to  "Add Participant", new_participant_path %></li>
           </ul>
         </li>
-        
+
       </ul>
-      <ul class="nav navbar-nav">        
+      <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatori<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to  "All Relatori", speakers_path%></li>
-            <li><%= link_to  "Add Relatore ", new_speaker_path %></li>  
+            <li><%= link_to  "Add Relatore ", new_speaker_path %></li>
           </ul>
         </li>
-        
+        <li><%= link_to  "Calendar", calendar_path %></li>
+        <li><%= link_to  "Ricerche", researches_path %></li>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to  "Sign out", destroy_user_session_path, method: :delete %></li>    
+        <li><%= link_to  "Sign out", destroy_user_session_path, method: :delete %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
