--- a/app/views/webinars/edit.html.erb
+++ b/app/views/webinars/edit.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_for(@webinar, html: {class:"form-horizontal", role: "form"}) do |f| %>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :name %>
     </div>
     <div class="col-sm-8">
@@ -11,19 +11,19 @@
     </div>
 </div>
 <div class="form-group">
-    
-    <div class="control-label col-sm-2">     
+
+    <div class="control-label col-sm-2">
       <%= f.label :relatore %>
-    </div>    
-        <div class="col-sm-8"> 
+    </div>
+        <div class="col-sm-8">
           <%= f.collection_check_boxes :speaker_ids, Speaker.all, :id, :full_name do |cb| %>
             <% cb.label(class: "checkbox input_checkbox col-sm-4") {cb.check_box(class: "checkbox") + cb.text} %>
             <% end %>
-        
+
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :programa %>
     </div>
     <div class="col-sm-8">
@@ -31,12 +31,13 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :date %>
     </div>
     <div class="col-sm-8">
-	  <%= f.date_field :date, class: "form-control" %>
+	  <%= f.datetime_select :date, { ampm: false, order: [:day, :month, :year] }, { class: "form-inline" } %>
     </div>
+		<%= f.hidden_field :user_id %>
 </div>
 
 
@@ -45,7 +46,7 @@
   <%= f.submit class: 'btn btn-primary btn-lg' %>
 </div>
 </div>
-  
+
 <% end %>
 
 <div class="col-xs-12" align="center">
