--- a/app/views/webinars/new.html.erb
+++ b/app/views/webinars/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for(@webinar, html: {class:"form-horizontal", role: "form"}) do |f| %>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :name %>
     </div>
     <div class="col-sm-8">
@@ -12,19 +12,19 @@
     </div>
 </div>
 <div class="form-group">
-    <div class="control-label col-sm-2">     
+    <div class="control-label col-sm-2">
       <%= f.label :relatore %>
-    </div>  
+    </div>
         <div class="col-sm-8">
             <%= f.collection_check_boxes :speaker_ids, Speaker.all, :id, :full_name do |cb| %>
             <% cb.label(class: "checkbox input_checkbox col-sm-4") {cb.check_box(class: "checkbox") + cb.text} %>
             <% end %>
         </div>
-    
+
 </div>
 
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :programma %>
     </div>
     <div class="col-sm-8">
@@ -32,12 +32,13 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :date %>
     </div>
     <div class="col-sm-8">
-	  <%= f.date_field :date, class: "form-control" %>
+	  <%= f.datetime_select :date, { ampm: false, order: [:day, :month, :year] }, { class: "form-inline" } %>
     </div>
+		<%= f.hidden_field :user_id %>
 </div>
 
 
@@ -46,7 +47,7 @@
   <%= f.submit class: 'btn btn-primary btn-lg' %>
 </div>
 </div>
-  
+
 <% end %>
 
 <div class="col-xs-12" align="center">
