--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for(@participant, html: {class:"form-horizontal", role: "form"}) do |f| %>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :first_name %>
     </div>
     <div class="col-sm-8">
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :last_name %>
     </div>
     <div class="col-sm-8">
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :email %>
     </div>
     <div class="col-sm-8">
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :qualification %>
     </div>
     <div class="col-sm-8">
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :city %>
     </div>
     <div class="col-sm-8">
@@ -44,7 +44,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :ascherip, 'Ascheri & Partners', class: "input_checkbox" %>
     </div>
     <div class="col-sm-8">
@@ -55,7 +55,7 @@
  <hr>
 <div class="form-group">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
+		<div class="">
 			<%= f.collection_check_boxes :webinar_ids, Webinar.all, :id, :name do |cb| %>
 			<% cb.label(class: "checkbox input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
 			<% end %>
@@ -66,9 +66,9 @@
 <% if @participant.webinars.exists?  %>
 <div class="form-group" >
 	<div class="row" >
-		<div class="col-sm-8 col-sm-offset-2" > <hr><hr> 
+		<div class="" > <hr><hr>
 		  <%= f.fields_for :participant_webinars do |d| %>
-		  <%= d.hidden_field :participant_id, value: @participant.id %>		  
+		  <%= d.hidden_field :participant_id, value: @participant.id %>
 		  <%= render 'participants/participantconnected', d: d %>
 		  <% end %>
 		</div>
@@ -80,10 +80,9 @@
   <%= f.submit class: 'btn btn-primary btn-lg' %>
 </div>
 </div>
-  
+
 <% end %>
 
 <div class="col-xs-12" align="center">
 [ <%= link_to  "Cancel and return to All Participant ", participants_path%> ]
 </div>
-
