--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 <form class="navbar-form navbar-right">
     <%= form_tag participants_path, method: :get do %>
-        <div class='form-group'>            
+        <div class='form-group'>
             <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Participant" %>
             <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
         </div>
@@ -10,37 +10,34 @@
 </form>
 </div>
 </div>
-    
 
 
-<div class="col-md-8 col-md-offset-2"> 
+
+<div class="col-md-8 col-md-offset-2">
 <h1 align="center">Participants <span class="badge badge-default"><%= pluralize(@participants.count, "participant")  %></span></h1><br>
 </div>
 <div align="center" >
   <%= will_paginate @participant, renderer: BootstrapPagination::Rails %>
 </div>
 
-<div class="row">	
+<div class="row">
 	<div class="col-md-8 col-md-offset-2">
 		<% @participants.each do |participant| %>
 		  <div align="center" class="well">
-			<h3 align="center"><%= participant.qualification %> <%= participant.first_name %> <%= participant.last_name %></h3>
-				<ul class="list-group">										
+			<h3 align="center"> <%= participant.first_name %> <%= participant.last_name %><br><%= participant.qualification %></h3>
+				<ul class="list-group">
 					<li  class="list-group-item">Email: <%= mail_to participant.email %> - City: <%= participant.city %></li>
-					<li class="list-group-item"><%= link_to "View this Participant", participant_path(participant), class: "btn btn-xs btn-success" %></li>			
+					<li class="list-group-item"><%= link_to "View this Participant", participant_path(participant), class: "btn btn-xs btn-success" %></li>
 				</ul>
-			<div align="center"><br>			
-						
+			<div align="center"><br>
+
 			</div>
 		  </div>
 		<% end %>
 	</div>
-	
+
 </div>
 
 <div align="center" >
   <%= will_paginate @participant, renderer: BootstrapPagination::Rails %>
 </div>
-
-
-
