--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,6 +26,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to  "All Participants", participants_path%></li>
             <li><%= link_to  "Add Participant", new_participant_path %></li>
+            <li><%= link_to  "Add data", participantwebinars_path %></li>
           </ul>
         </li>
 
