--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -52,8 +52,10 @@ div {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  vertical-align: middle;
   display: table;
+  border: 2px solid red;
+  border-radius: 5px;
 }
 
 #error_explanation {
