--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for(@participant, html: {class:"form-horizontal", role: "form"}) do |f| %>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :first_name %>
     </div>
     <div class="col-sm-8">
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :last_name %>
     </div>
     <div class="col-sm-8">
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :email %>
     </div>
     <div class="col-sm-8">
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :qualification %>
     </div>
     <div class="col-sm-8">
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :city %>
     </div>
     <div class="col-sm-8">
@@ -44,7 +44,7 @@
     </div>
 </div>
 <div class="form-group">
-	<div class="control-label col-sm-2">	 
+	<div class="control-label col-sm-2">
 	  <%= f.label :ascherip, 'Ascheri & Partners', class: "input_checkbox" %>
     </div>
     <div class="col-sm-8">
@@ -54,20 +54,20 @@
 <hr>
 <div class="form-group">
 	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
+
 			<%= f.collection_check_boxes :webinar_ids, Webinar.all, :id, :name do |cb| %>
-			<% cb.label(class: "checkbox input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+			<% cb.label(class: "col-md-6 checkbox input_checkbox ") {cb.check_box(class: "checkbox") + cb.text} %>
 			<% end %>
-		</div>
+
 	</div>
 </div>
 
 <div class="form-group">
-  <div class="col-sm-offset-2 col-sm-8">
+  <div class="col-xs-12" align="center">
   <%= f.submit class: 'btn btn-primary btn-lg' %>
 </div>
 </div>
-  
+
 <% end %>
 
 
@@ -78,20 +78,15 @@
 <div class="col-xs-12"><hr></div>
 
 
-<div class="col-sm-4 col-sm-offset-4">		
+<div class="col-sm-4 col-sm-offset-4">
 		<h3 align="center">Import Participants</h3><br>
 		<%= form_tag import_participants_path, multipart: true  do %>
 		<span class="btn btn-xs btn-warning btn-file">
            Choose File
              <%= file_field_tag :file %>
         </span><br><br>
-		
+
 		<%= submit_tag "Upload participants",class: 'btn btn-xs btn-success' %>
-		<% end %><br>		
-		
+		<% end %><br>
+
 </div>
-
-
-
-
-
