--- a/app/views/webinars/new.html.erb
+++ b/app/views/webinars/new.html.erb
@@ -5,7 +5,7 @@
 <%= form_for(@webinar, html: {class:"form-horizontal", role: "form"}) do |f| %>
 <div class="form-group">
 	<div class="control-label col-sm-2">
-	  <%= f.label :name %>
+	  <%= f.label 'Name' %>
     </div>
     <div class="col-sm-8">
 	  <%= f.text_field :name, class: "form-control", placeholder: "Enter webinar name", autofocus: true %>
